# XiaoTian_Quant

./: .dockerignore  .editorconfig  .env.example  .gitignore  .golangci.yml  ARCHITECTURE.md  CHANGELOG.md  COMPREHENSIVE_AUDIT.md  CONTRIBUTING.md  CRA_量化机器人_完整文档.md  DEPLOYMENT.md  DEPLOY_VERIFICATION.md  Dockerfile  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  INSTALL.md  LICENSE  Makefile  P0阻塞问题深挖报告.md  P1问题精细化修复报告.md  PROJECT_COMPLETENESS_REPORT.md  PROJECT_STATUS_REPORT.md  README.md  REFACTOR_COMPLETE.md  REFACTOR_PLAN.md  REMAINING_TASKS.md  REPAIR_COMPLETE.md  REPAIR_COMPLETE_v2.md  REPAIR_PLAN.md  REPAIR_PLAN_v2.md  SECURITY.md  THREE_BOTS_DESIGN.md  UI_AUDIT_REPORT.md  UI_DUPLICATE_DESIGN_REPORT.md  audit-backend.md  audit-engine-ml.md  audit-frontend.md  build.sh  deploy-linux.sh  deploy.sh  (+25 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.playwright-cli/: page-2026-06-13T09-48-13-556Z.yml  page-2026-06-13T09-49-56-511Z.yml  page-2026-06-13T09-51-06-019Z.yml
config/: schema.py
docker/: Dockerfile  init.sql
docs/: DEPLOYMENT.md  README.md  quickstart.md  strategy-guide.md
docs/api/: rest-api.md
engine/: Cargo.toml  README.md
engine/benches/: matching_benchmark.rs
engine/src/: ffi.rs  ffi_test.rs  lib.rs  lib_test.rs  matching.rs  orderbook.rs  orderbook_test.rs
engine/src/executor/: execution.rs  mod.rs  position.rs  signal.rs  tpsl.rs
gateway/: README.md  go.mod  go.sum
gateway/data/: indices.json  markets.json
gateway/docs/: openapi.yaml
gateway/spa/: spa.go  (+3 more)
nginx/: generate-cert.sh  nginx.conf
sandbox/: Dockerfile  README.md  analyzer.py  executor.py  main.py  requirements.txt  train.py
scripts/: sync_data.py
strategies/: ai_strategy.py  arbitrage.py  grid_trading.py  market_making.py  torch_strategy.py
tests/: __init__.py  test_backtest.py  test_exchange.py  test_factors.py
web/: .eslintignore  .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  前端审计报告.md
xtquant/: __init__.py
(+1688 files in other folders)
