[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "xiaotian-quant-sandbox"
version = "3.0.0"
description = "XiaoTianQuant ML/indicator sandbox service"
readme = "sandbox/README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "ccxt>=4.0.0",
    "flask>=3.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "xgboost>=2.0.0",
    "tensorboard>=2.16.0",
    "ray[rllib]>=2.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
ml = [
    "tensorflow>=2.16.0",
    "torch>=2.3.0",
    "accelerate>=0.32.0",
]

[project.scripts]
ml-server = "ml_server.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_server*", "indicators*", "ccxt_bridge*"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sandbox --cov-report=term-missing -v"
