[package]
name = "xt-matching-engine"
version = "0.1.0"
edition = "2021"
description = "XiaoTianQuant matching engine — price-time priority order book in Rust"

[lib]
name = "xt_matching"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
